[package]
name = "cuddly-enigma"
version = "0.1.0"
edition = "2021"

[dependencies]
# the dynamic-linking feature should be removed before making release versions
# see: https://bevyengine.org/learn/quick-start/getting-started/setup/#enable-fast-compiles-optional
bevy = { version = "0.14.0-rc.2", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
